--- a/tex/03_baseline.tex
+++ b/tex/03_baseline.tex
@@ -8,8 +8,8 @@
 
 \section{数据来源及描述}
 
-本论文研究工作使用的数据由国内知名的在线票务服务商提供。数据以表的格式组织，每条数据为一张机票订单。原始数据记录中的主要字段如表\ref{tab:fields}所示。
-表格的前两项分别标识航班所属的航线；由于国内部分城市有两个或更多个机场，所以需要标注航班的起飞机场和到达机场；舱位等级主要包括头等舱，商务舱和经济舱三个大类；飞机型号包含了飞机的大小等特征。
+本论文研究工作使用的数据由国内知名的在线票务网站提供。数据以表的格式组织，每条数据为一张机票订单。原始数据记录中的主要字段如表\ref{tab:fields}所示。
+表格的前两项分别标识航班所属的航线；由于国内部分城市有两个或更多个机场，所以需要标注航班的起飞机场和到达机场；航班舱位等级包括经济舱、商务舱和头等舱三类；飞机型号包含了飞机的大小等特征。
 \begin{table}[!h]
   \centering
   \bicaption[tab:fields]{字段介绍}{原始机票订单数据的字段}{Table}{Fields of 
@@ -31,7 +31,7 @@
   \end{tabular}
 \end{table}
 
-表格中的字段表明了机票数据高度结构化的特性。机票数据的属性与书籍、电影、音乐等物品的属性不同。后者的属性通常仅作为物品分类的依据，不能直接反映物品本身的内容。而机票数据的属性则可以代表机票本身的内容，进而直接影响用户的购买决策。另外，不同于上述物品固定的静态属性，机票的价格属于动态属性，即使对于相同航班的同一等级的舱位，其票价在起飞前会发生持续变动，并且变动的幅度很大。而价格作为机票内容中相当重要的一项，会在很大程度上影响用户的选择。因此，即使两张机票具有相同的的航班号和舱位等级，如果它们的价格不同，我们也不能将其当作同一个物品；也难以直接使用以 User-Item 矩阵表示的协同过滤类型的方法进行机票推荐。根据机票数据具备的上述特性，我们主要使用基于内容的方法进行机票推荐。此外，用户搜索时产出的候选机票数量约为一百左右，远低于传统推荐系统中成千上万的物品数量，但是每项候选机票都算作一个新的物品。个性化的机票推荐的流程相当于将这数百项候选机票针对用户的特征模型进行重新排序，最终按照排序后的结果向用户展示。因此，我们首先需要为每位用户进行特征建模。
+表格中的字段表明了机票数据高度结构化的特性。机票数据的属性与书籍、电影、音乐等物品的属性不同。后者的属性通常仅作为物品分类的依据，不能直接反映物品本身的内容。而机票数据的属性则可以代表机票本身的内容，进而直接影响用户的购买决策。另外，不同于上述物品固定的静态属性，机票的价格属于动态属性，即使对于相同航班的同一等级的舱位，其票价在起飞前会发生持续变动，并且变动的幅度很大。而价格作为机票内容中相当重要的一项，会在很大程度上影响用户的选择。因此，即使两张机票具有相同的的航班号和舱位等级，如果它们的价格不同，我们也不能将其当作同一个物品；也难以直接使用以 User-Item 矩阵表示的协同过滤类型的方法进行机票推荐。根据机票数据具备的上述特性，我们主要使用基于内容的方法进行机票推荐。此外，用户搜索时产出的候选机票数量约为一百左右，远低于传统推荐系统中成千上万的物品数量，但是每项候选机票都算作一个新的物品。个性化机票推荐的流程相当于将这数百项候选机票针对用户的特征模型进行重新排序，最终按照排序后的结果向用户展示。因此，我们首先需要为每位用户进行特征建模。
 
 \section{用户特征分布模型}
 
@@ -46,7 +46,7 @@
 
 其中，$P_{full}$的含义是经济舱无折扣价格，是航空公司制定的标准价，变动频率很小（通常以年为单位）；
 $P_{cur}$是当前机票的价格，在每条订单记录中可以获取。$P_{low}$是本次搜索页面中的最低价。
-从几项参数的含义可以看出，如果用户选择的机票价格很低，分子越大，等式的值越接近于1；反之，等式的值越小，当用户选择的票价高于经济舱全价时，价格指数的值小于0。因此，价格指数越大，代表用户对票价越敏感；反之亦然。我们可以使用价格指数代表多变而重要的价格特征。并且，通过该公式计算出的价格指数与航线、距离起飞日期天数等因素无关，进而具有良好的通用性。得到价格指数后，可以结合业务领域知识将其划分为数个有代表性的区间。
+从几项参数的含义可以看出，如果用户选择的机票价格很低，分子越大，等式的值越接近于1；反之，等式的值越小。当票价高于经济舱全价时，价格指数的值小于0。因此，价格指数越大，代表用户更倾向于选择低价机票，即对票价越敏感。我们可以使用价格指数代表多变而重要的价格特征。并且，通过该公式计算出的价格指数与航线、距离起飞日期天数等因素无关，进而具有良好的通用性。得到价格指数后，可以结合业务领域知识将其划分为数个有代表性的区间。
 
 完成对连续型特征的离散化后，我们又选取了起飞机场、到达机场（对于包含多机场城市的航线）、航空公司、舱位等级、退改签政策、飞机型号等关键特征。这些特征可以初步理解为对机票内容的概括。至此，机票的一个特征可以表示为一个向量，该向量的每个维度代表该特征对应的每个可能的取值（区间）；用户对一个特征中某个维度的偏好值可以由用户在对应维度所占的选择频数百分比来描述，选择频数可以通过用户的历史订单统计。由定义可知，用户在一个特征上所有维度的分布百分比值之和为1。
 
@@ -73,15 +73,15 @@ $P_{cur}$是当前机票的价格，在每条订单记录中可以获取。$P_{l
 \end{equation}
 
 上式的含义是特征$X$所包含的信息丰富程度，$x_i$是$X$中每个维度的取值。
-当取值越集中，即用户在该特征的分布越集中时，熵值越小。当熵达到的最小值$0$时，表明用户的特征分布都集中在一个维度；反之，如果用户的特征分布越分散，则熵值越大。
-当每个维度的取值相等时，熵达到最大值$\ln n$，$n$为特征的维度数目。
+当取值越集中，即用户在该特征的分布越集中时，熵值越小。当熵达到的最小值$0$时，表明用户的特征分布都集中在一个维度；反之，如果用户的行为越分散，则熵值越大。
+当每个维度的分布相等时，熵值为$\ln n$，$n$为特征的维度数目。
 因此，熵具有的性质可以用来计算用户对于每个特征的分布集中程度。为了消除特征维度的差异对熵值
-带来的影响，我们对熵进行归一化处理，生成标准熵：
+带来的影响，我们对熵值进行归一化处理：
 \begin{equation}
   W(f) = \frac{\ln |f| - S(\mathbf{f})}{\sum_{f \in F}(\ln |f| - S(\mathbf{f}))}
 \end{equation}
 
-$F$为机票的特征集合，$W(f)$为目标用户在特征$f$上的权重，$f$代表特征$f$的维度。用户在每个特征的偏好分布与所有特征权重构成了完整的用户特征分布模型。结合由搜索产生的候选机票列表，就可以为用户进行个性化机票推荐。
+$F$为机票的所有特征，$W(f)$为目标用户在特征$f$上的偏好权重，$|f|$代表特征的维度数目。用户在每个特征的偏好分布与所有特征权重构成了完整的用户特征分布模型。结合由搜索产生的候选机票列表，就可以为用户进行个性化机票推荐。
 
 \section{基于用户特征分布的机票推荐算法}
 \label{sec:base_rec}
@@ -199,7 +199,7 @@ $F$为机票的特征集合，$W(f)$为目标用户在特征$f$上的权重，$f
 \bicaption[fig:total]{分布统计}{北京-上海订单、用户分布统计}{Fig}{Figure for Data Statistic in Test Alrlines}
 \end{figure}
 
-我们针对北京-上海航线做了详细的数据分布统计。图\ref{fig:user_user_percent}展示了该航线的用户订单数与用户数量的分布关系，其横轴代表数据集用户的订单数，纵轴代表当前用户数占总用户总数的百分比。结合图表，其含义是订单数量不超过一单的用户占用户总数量的$61\%$；订单数量不超过两单的用户占总量的$80\%$；$99\%$以上的用户订单数量在$10$以下。图\ref{fig:user_order_percent}展示了该航线用户订单数与订单总数量之间的分布关系，其纵轴代表当前订单数占订单总数的百分比。虽然订单数为1单的用户占总用户数的$61\%$，但仅占了$25\%$的订单；订单数量不超过$15\%$的用户占了总订单量的$85\%$。订单数量过多的用户很可能是旅行社代理、部门秘书等代订用户，这部分用户通常为多个乘机人订票，因此从他们的历史订单学习到的偏好几乎不具有代表性，并且代订用户的出行往往有极强的计划性，因此为其进行推荐的效果有限。结合用户数量和订单的分布情况，我们将订单数量多于$15$的用户从实验数据集中剔除；
+我们针对北京-上海航线做了详细的数据分布统计。图\ref{fig:user_user_percent}展示了该航线的用户订单数与用户数量的分布关系，其横轴代表数据集用户的订单数，纵轴代表当前用户数占总用户总数的百分比。结合图表，其含义是订单数量不超过一单的用户占用户总数量的$61\%$；订单数量不超过两单的用户占总量的$80\%$；$99\%$以上的用户订单数量在$10$以下。图\ref{fig:user_order_percent}展示了该航线用户订单数与订单总数量之间的分布关系，其纵轴代表当前订单数占订单总数的百分比。虽然订单数为1单的用户占总用户数的$61\%$，但仅占了$25\%$的订单；订单数量不超过$15\%$的用户占了总订单量的$85\%$。订单数量过多的用户很可能是旅行社代理、部门秘书等代订用户，这部分用户通常为多个乘机人订票，因此从他们的历史订单学习到的偏好几乎不具有代表性，并且代订用户的出行往往有极强的计划性，因此为其进行推荐的效果有限。结合用户数量和机票订单的分布情况，我们将订单数量多于$15$的用户从实验数据集中剔除；
 由于没有测试数据，订单数量为一单的用户也不能用于实验。
 
 此处还有一个问题，因为数据集仅有用户选购的机票，并且机票具备较强的实时性和波动性，我们无法恢复用户订票时的候选机票列表。一个可行的办法是使用相同出发日期、相同航线的所有用户订单构建候选机票列表。列表中每项机票之间以航班号、舱位等级、价格加以区分。在热门程度较高的航线上，由于用户量、订单量都十分巨大，我们可以假设全量用户订单对即时搜索结果的覆盖率很高。
@@ -236,11 +236,11 @@ MA = \frac{\sum_{i=1}^{|M|}A_{rec}(M_i)}{|M|}
  \bicaption[fig:res_pref_rec]{基线推荐结果}{四条航线推荐结果的平均准确率}{Fig}{Mean Accuracy of Recommendation on Airlines}
 \end{figure}
 
-图\ref{fig:res_pref_rec}展示了在四条测试航线上的机票推荐结果。Pre代表根据用户特征分布模型算法；pRk代表低价排序策略；hRk代表按热门程度排序策略。从实验结果可以看出基于特征分布模型的方法具有较高的平均准确率，代表使用这种方法对候选机票进行排序，可以使更符合用户偏好的机票排在考前的顺位。基于低价排序和机票热门程度排序这两种基础的策略平均准确率较低。从图中可以看出，两种基础的排序策略距基于特征分布模型的推荐算法有较大的差距。首先，因为这两种方法没有充分考虑用户的个性化偏好，而是基于简单的统计策略。
+图\ref{fig:res_pref_rec}展示了在四条测试航线上的机票推荐结果。Pre代表根据用户特征分布模型算法；pRk代表低价排序策略；hRk代表按热门程度排序策略。从实验结果可以看出基于特征分布模型的方法具有较高的平均准确率，代表使用这种方法对候选机票进行排序，可以使更符合用户偏好的机票排在更靠前的顺位。基于低价排序和机票热门程度排序这两种基础的策略平均准确率较低。可以看出，两种基础的排序策略距基于特征分布模型的推荐算法有较大的差距。首先，因为这两种方法没有充分考虑用户的个性化偏好，而是基于简单的统计策略。
 其次对于低价排序策略，很多时候价格并不是影响用户购买决策的唯一因素。而对于按照热门程度排序的策略，由于机票物品的数量受限于航班的仓位数量，无法如同其它商品获取到准确的热门度。也对推荐效果造成了一定的影响。
 
 
 \section{本章小结}
-本章我们首先介绍了实验数据，并结合业务经验知识，提取机票数据的重要特征并对其中的连续特征进行预处理。其次我们对机票推荐的场景进行介绍，该场景将贯穿后续章节。我们根据用户历史订单数据的分析统计结果，创建了用户特征分布模型；又根据衡量信息丰富程度的熵值理论计算用户对每个特征的权重。从而提出了一个完整的个性化机票推荐方法。
+本章我们首先介绍了实验数据，并结合业务经验知识，提取机票数据的重要特征并对其中的连续特征进行预处理。其次我们对机票推荐的场景进行介绍，该场景将贯穿后续章节。我们通过对用户历史订单数据进行分析，提出了用户特征分布的偏好模型，又根据衡量信息丰富程度的熵值理论计算用户对每个特征的权重。从而提出了一个完整的个性化机票推荐方法。
 
 在数据实验阶段，我们提取了几条热门航线，分析了用户、订单的分布情况。对比了基于特征分布模型的推荐算法以及两种基础的推荐策略在实验数据集上的效果。证实了结合用户偏好的推荐比基于策略推荐有很大的提升。在接下来的几章里，我们将以此方法作为基线推荐算法，细化应用场景，深入研究，以进一步提升推荐算法的准确率。
