--- a/tex/04_latent.tex
+++ b/tex/04_latent.tex
@@ -7,7 +7,7 @@
 
 \section{用户出行性质对机票推荐准确率的影响}
 
-我们将第三章中提出的用户特征分布模型进行上线部署并进行了一段时间的A/B测试对照实验。实验将用户随机分流，一部分用户（实验组）看到的候选机票列表是经过个性化推荐过后的搜索结果展示页。对于航线冷启动用户，我们在线上生产环境中采取了特征打分的原则并提供多样性推荐；其他用户（对照组）看到的是原版展示页。实验的主要观测指标是用户转化率，即订购机票的用户占浏览过机票用户总数的比例。A/B测试证实，实验组比对照组的转化率有所提升，但在周末和节假日时，实验组的转化率有所下降。我们通过分析发现，主要有两方面的原因。
+我们将第三章中提出的用户特征分布模型进行上线部署并进行了一段时间的A/B测试对照实验。实验将用户随机分流，一部分用户（实验组）看到的候选机票列表是经过结合其偏好模型进行重排序过后的候选航班展示页。对于航线冷启动用户，我们在线上生产环境中采取了特征打分的原则并提供多样性推荐；其他用户（对照组）看到的是原版展示页。实验的主要观测指标是用户转化率，即订购机票的用户占浏览过机票用户总数的比例。A/B测试证实，实验组比对照组的转化率有所提升，但在周末和节假日时，实验组的转化率有所下降。我们通过分析发现，主要有两方面的原因。
 
 \begin{figure}
  \centering
@@ -62,7 +62,7 @@ $F_i$ & 机票显性特征，增加起飞日期特征，维度 |F * 1| \\ \hline
   \end{tabular}
 \end{table}
 
-式\ref{eq:utility}代表效用函数，$\phi_u$代表用户的偏好，$\theta_i$代表物品的特征。在结合隐形特征模型中，我们将用户在显性空间上的特征分布模型$K_u$通过转换矩阵$W_u$转换到隐性空间；类似地，将物品在显性空间上的特征$F_i$通过转换矩阵$M_i$转换到隐性空间。我们将起飞日期作为特征，添加到$K_u$和$F_i$中。每个参数的含义及维度详细列在表\ref{tab:lat_model}中。
+式\ref{eq:utility}代表效用函数，$\phi_u$代表用户的偏好，$\theta_i$代表物品的特征。在结合隐性特征模型中，我们将用户在显性空间上的特征分布模型$K_u$通过转换矩阵$W_u$转换到隐性空间；类似地，将物品在显性特征$F_i$通过转换矩阵$M_i$转换到隐性空间。我们将起飞日期作为特征，添加到$K_u$和$F_i$中。每个参数的含义及维度详细列在表\ref{tab:lat_model}中。
 
 \begin{eqnarray}
 \label{eq:pij}
@@ -70,7 +70,7 @@ $F_i$ & 机票显性特征，增加起飞日期特征，维度 |F * 1| \\ \hline
 	 & = &\frac{1}{1+e^{-(V(u,i) - V(u,j))}}
 \end{eqnarray}
 
-式\ref{eq:pij}中，$P(i,j)$代表用户对物品$i$比物品$j$有更强偏好的概率。我们为用户在两张机票上的偏好比较概率建立一个Sigmoid函数\cite{jingfan1997novel}。如果我们假设用户选择的机票在候选机票列表中具有最强的偏好。则可以将用户实际选择的机票和任意一条候选机票构成一组成对(pair-wise)关系，并将式\ref{eq:pij}作为目标函数进行迭代学习。最终的学习效果是使得用户实际购买的机票有最大的效用值。该模型的目标函数如下：
+式\ref{eq:pij}中，$P(i,j)$代表用户对物品$i$比物品$j$有更强偏好的概率。我们为用户在两张机票上的偏好比较概率建立一个Sigmoid函数\cite{jingfan1997novel}。如果我们假设用户选择的机票在候选机票列表中具有最强的偏好。则可以将用户实际选择的机票和任意一条候选机票构成一组成对(pair-wise)关系，并将式\ref{eq:pij}作为目标函数进行迭代学习。最终的学习效果是使得用户实际购买的机票有最大的偏好。该模型的目标函数如下：
 
 \begin{equation}
 \label{eq:cost}
@@ -93,7 +93,7 @@ $F_i$ & 机票显性特征，增加起飞日期特征，维度 |F * 1| \\ \hline
 
 \section{结合隐性特征的机票个性化推荐}
 
-在前面的章节中，我们主要关注用户在不同出发日期的行为变化，并尝试使用转换矩阵将用户和机票在显性空间上的特征分布与内容都映射到隐形空间，以此捕捉用户的行为变化和显性特征间的联系。并基于用户的训练订单，使用随机抽样的梯度下降法对转换矩阵参数进行训练。得到训练后的转换矩阵后，我们可以计算用户对每条候选机票的效用函数$V(u,i)$，并根据效用函数对机票进行排序。在进行机票推荐时，我们可以将根据显性用户模型和隐性用户偏好模型的排序结果综合起来，作为最终推荐结果。
+在前面的章节中，我们主要关注用户在不同出发日期的行为变化，并尝试使用转换矩阵将用户的显性偏好和机票的显性内容都映射到隐性空间，以捕捉用户的行为变化和显性内容间的联系。并基于用户的训练订单，使用随机抽样的梯度下降法对转换矩阵参数进行训练。得到训练后的转换矩阵后，我们可以计算用户对每条候选机票的效用函数$V(u,i)$，并根据效用函数对机票进行排序。在进行机票推荐时，我们可以将根据显性用户模型和隐性用户偏好模型的排序结果综合起来，作为最终推荐结果。
 
 \begin{equation}
 \label{eq:mix_rat}
@@ -139,7 +139,7 @@ $F_i$ & 机票显性特征，增加起飞日期特征，维度 |F * 1| \\ \hline
 
 算法\ref{algo:lat_rec}展示了结合隐性特征的机票推荐算法的流程。在模型训练过程中，我们使用用户历史订单作为训练集。对于每一条训练数据，我们需要获取当时的模拟搜索结果，其方法与在第三章进行推荐实验时相同，以航班、起飞日期和舱位为筛选条件，从全体订单数据中检索。每次训练，我们在搜索结果中进行取样，与该条订单数据构成一组成对关系，并更新参数。当到达迭代停止条件后停止训练，这里的迭代停止条件包括到达迭代次数、结果收敛以及训练订单的效用达到最大值。
 
-在机票推荐过程中，我们对候选机票列表中的每张机票的显性用户模型排序和隐性用户模型排序综合起来，得到最终的推荐列表。算法的计算复杂度是$O(WN)$，其中$W$是隐形空间的特征数量，$N$是迭代次数上限。可以认为，该算法与隐形特征数量呈线性关系。
+在机票推荐过程中，我们对候选机票列表中的每张机票的显性用户模型排序和隐性用户模型排序综合起来，得到最终的推荐列表。算法的计算复杂度是$O(WN)$，其中$W$是隐性空间的特征数量，$N$是迭代次数上限。可以认为，该算法与隐性特征数量呈线性关系。
 
 
 \section{实验结果分析}
@@ -150,14 +150,14 @@ $F_i$ & 机票显性特征，增加起飞日期特征，维度 |F * 1| \\ \hline
 在实验中，我们选取北京到上海，北京到成都，北京到深圳，北京到西安四条航线的活跃用户作为测试用户。我们将测试订单按起飞日期分成工作日、周末、节假日三类。研究结合隐性特征的模型是否能够适应用户在不同起飞日期的行为变化。
 
 本章我们仍使用第三章实验评价指标，式\ref{eq:a-rec}对每条机票推荐准确率进行评价，
-式\ref{eq:ma}对为所有用户的机票推荐平均准确率进行评价。
+式\ref{eq:ma}对为机票推荐平均准确率进行评价。
 
 \subsection{机票推荐准确率}
 
 \begin{figure}
  \centering
  \includegraphics[width=0.6\linewidth]{04/3_lat_rec.pdf}
- \bicaption[fig:la_hd_rec]{节假日机票推荐}{结合隐形特征模型在节假日的机票推荐准确率}{Fig}{Mean Accuracy for Latent Factor Combined Flight Recommendation at Holidays}
+ \bicaption[fig:la_hd_rec]{节假日机票推荐}{结合隐性特征模型在节假日的机票推荐准确率}{Fig}{Mean Accuracy for Latent Factor Combined Flight Recommendation at Holidays}
 \end{figure}
 
 图\ref{fig:la_hd_rec}展示了四条航线在节假日的推荐结果。包括显性用户模型(ori)、随机样本模型(sgd)、偏好排序样本模型(pgd)。如前文所述，sgd和pgd的区别是，前者使用随机抽样成对样本进行模型训练；后者使用根据显性偏好排序的成对样本进行模型训练。可以看出，结合隐性特征的机票推荐准确率比仅使用显性用户模型有所提升。而使用基于偏好排序样本的训练模型对机票推荐准确率相较随机样本模型的推荐准确率有少量提升。可以证明，结合隐性特征的用户模型可以反映出用户在节假日的行为变化，也能够一定程度上挖掘到机票显性特征之间的关联。
