--- a/tex/01_intro.tex
+++ b/tex/01_intro.tex
@@ -5,61 +5,58 @@
 
 
 \section{研究背景及意义}
-近年来，国内的旅游业和电子商务都得到迅猛的发展，在线旅游业务同时结合了二者的特点，也逐渐走进用户的视野。国内兴起了大量的在线旅行服务企业，它们注重于将原线下旅行社的业务模式发布在线上平台，为用户提供高效、便捷的旅行产品订购体验。机票订购业务作为在线旅行票务服务企业的重要业务之一，为大量用户提供在线选购机票的业务支持。用户只需在机票订购页面输入自己的出发城市、到达城市、出发日期等出行信息，就可以检索到符合条件所有航司提供的航班，页面除了展示起降时间、航班、舱位、价格等基础信息外，还包括准点率、退改签政策等详细服务信息。在传统的机票订购业务中，用户需要自行聚合各航司的票务信息，而在线机票服务平台集合了所有航司的可以给用户提供更丰富、实时的票务信息。
+近年来，国内的旅游业和电子商务都得到迅猛的发展，在线旅游业务同时结合了二者的特点，也逐渐走进用户的视野。国内兴起了大量的在线旅行服务企业，它们注重于将原线下旅行社的业务模式发布在线上平台，为用户提供高效、便捷的旅行产品订购体验。机票订购业务作为在线旅行票务服务企业的重要业务之一，为大量用户提供在线选购机票的业务支持。用户通过在机票搜索页面输入自己的出发城市、到达城市、出发日期等出行信息，即可检索到所有航空公司提供的符合条件的航班，页面除了展示起降时间、航班、舱位、价格等基础信息外，还包括准点率、退改签政策等详细服务信息。在传统的机票订购业务中，用户需要自行聚合各航司的票务信息，而在线机票服务平台集合了所有航司的可以给用户提供更丰富、实时的票务信息。
 
-虽然在线机票订购业务丰富了用户的选择，但对于很多航线，展示结果往往包括上百条候选机票。这些机票一般以航班为粒度，每个航班下细分多个舱位，每个舱位对应不同的价格和退改签政策。为了根据偏好及出行计划选购最适合的机票，用户通常需要反复浏览、比较。一定程度上增加了用户的选择成本，降低了交互效率，也会对转化率带来影响。如果能够从众多候选机票中为用户选出适合的机票，就可以减少用户在候选机票列表页的停留时长，进一步提升用户体验，会对网站的转化率起到积极作用。
+虽然在线机票订购业务丰富了用户的选择，但对于很多航线，展示结果往往包括上百条候选机票。这些机票一般以航班为粒度，每个航班下细分多个舱位，每个舱位对应不同的价格和退改签政策。为了根据偏好及出行计划选购最适合的机票，用户通常需要反复浏览、比较，增加了用户的选择成本，降低了交互效率，也会对转化率带来影响。如果能够从众多候选机票中为用户推荐适合的机票，就可以减少用户在候选机票列表页的停留时长，进一步提升用户体验，会对网站的转化率起到积极作用。
 
-在线机票票务网站往往只提供一些基于业务规则的排序、筛选策略，如起飞时间排序、价格排序，以及按起飞时段筛选、按航司筛选等。这些策略虽然可以减少候选机票的数量，但无法根据用户的偏好和计划安排为每位用户进行个性化机票推荐。因次，如果能够根据每位用户的偏好，为该用户从搜索生成的候选机票列表中推荐满足用户偏好的机票，可以更有效地克服机票购买中信息过载问题。因此，个性化机票推荐具有实际应用意义。
+在线机票票务网站往往只提供一些基于业务规则的排序、筛选策略，如起飞时间排序、价格排序，以及按起飞时段筛选、按航司筛选等。这些策略虽然可以减少候选机票的数量，但无法根据用户的偏好和出行划为每位用户进行个性化机票推荐。如果能够根据每位用户的偏好，为该用户从搜索生成的候选机票列表中推荐满足其偏好的机票，可以更有效地克服机票选购中信息过载问题。因此，个性化机票推荐具有实际应用意义。
 
-推荐系统\cite{schafer1999recommender,konstan1997grouplens}诞生于二十世纪九十年代，作用是为用户发现合适的商品或服务。随着互联网产业的普及与生态的推广，网络信息急速膨胀，信息过载问题普遍存在。除了信息检索引擎外，作为克服信息过载问题的另一种重要方案，推荐系统在学术界和工业界都受到很大的重视，逐渐形成一个独立的研究方向并得到持续发展。当今，推荐系统在电子商务平台、多媒体分发平台等领域扮演着愈加重要的角色。
+推荐系统诞生于二十世纪九十年代，其作用是为用户发现合适的商品或服务\cite{schafer1999recommender,konstan1997grouplens}。随着互联网产业的普及与生态的推广，网络信息急速膨胀，信息过载问题普遍存在。除了信息检索引擎外，作为克服信息过载问题的另一种重要方案，推荐系统在学术界和工业界都受到很大的重视，逐渐形成一个独立的研究方向并得到持续发展。当今，推荐系统在电子商务平台、多媒体分发平台等领域扮演着愈加重要的角色。
 
-由于机票的价格受距起飞日期因素的影响，并且价格的波动范围较大，而价格是用户订购机票时考虑的重要特征。同时由于机票物品具有极强的实时性，机票的数量受限于飞机的舱位数量，用户每次搜索产生成的候选机票列表都不相同。因此机票推荐与一般的电影、音乐等传统物品的推荐算法有所不同。如何合理地为在线机票订购场景实现个性化推荐，是一个关键的问题。
+由于机票的价格在起飞日期之前是持续变动的，并且价格的波动范围较大，而价格是用户订购机票时考虑的重要特征；同时由于机票物品具有极强的实时性，机票的数量受限于飞机的舱位数量，用户每次搜索产生成的候选机票列表都不相同。因此机票推荐与一般的电影、音乐等传统物品的推荐算法有所不同。如何合理地为在线机票订购场景实现个性化推荐，是一个关键的问题。
 
-伴随人工智能的出现，机器学习在二十世纪五十年代诞生\cite{portugal2015use}。随着计算机产业的发展，机器学习被越来越多地应用在各个领域。现如今有包括K-NN，聚类以及贝叶斯网络等很多种机器学习算法都被应用在诸如图像识别、无人驾驶车辆等领域。机器学习算法也被应用在推荐系统中，用以为用户提供更精确的推荐。然而，由于在研究中提出的新模型及其变种的数量过于庞大，机器学习领域的算法并不存在一个清晰的分类。将机器学习结合到推荐系统中，以及选择一种最适合实际推荐场景的机器学习算法都是极具挑战性的问题。
+机器学习的概念诞生于二十世纪五十年代\cite{portugal2015use}。随着计算机产业的发展，机器学习逐渐在更多的领域被广泛应用。现如今有包括K-NN，聚类以及贝叶斯网络等很多种机器学习算法都被应用在诸如图像识别、无人驾驶车辆等领域。机器学习算法也被应用在推荐系统中，能够提升推荐的效果。然而，由于在研究中提出的新模型及其变种的数量过于庞大，机器学习领域的算法并不存在一个清晰的分类。如何将机器学习结合到推荐系统中，以及如何选择一种最适合推荐场景的机器学习算法都是极具挑战性的问题。
 
-在阐述了研究问题的实际应用意义以及在技术方案方面的可行性与挑战之外，我们还分析了数据资源可行性以及计算资源可行性。本课题是与一家国内知名在线票务服务商的合作项目，研究使用的数据是经该公司授权、用户脱敏的机票原始订单，我们在严格保证数据机密的条件下，可以对数据进行手机、采样、分析等操作。此外，目前已有很多开放使用的数据分析工具如R，Python第三方工具包等，可以用于单机进行少量数据的处理与分析，还有包括Hive，Spark等分布式数据仓库和计算框架等工具，可以用于算法的大规模并行计算与生产环境线上部署。
+本课题是与一家国内知名在线票务服务商的合作项目，研究使用的数据是经该公司授权、用户脱敏的机票原始订单，我们在严格保证数据机密的条件下，可以对数据进行手机、采样、分析等操作。此外，目前已有很多开放使用的数据分析工具如R，Python第三方工具包等，可以用于单机进行少量数据的处理与分析；还有包括Hive，Spark等分布式数据仓库和计算工具，可以用于算法的大规模并行计算与生产环境线上部署。综上，本研究课题在技术方案方面、数据资源以及计算资源方面都有可行性保证。
 
-结合研究问题的实际应用意义以及各方面的可行性，本文对如何为用户进行机票方案的个性化推荐展开研究。论文主要提出一套契合在线机票服务的数据预处理、分析与推荐算法模型，根据用户的历史订单数据建立用户的偏好模型。结合机票的特征内容，为用户准确、高效地产生推荐合适的机票。此外，本文还结合了其他相关领域的技术方案，对一些细粒度的场景提出了更具针对性的推荐策略，以进一步提升机票推荐效果。
+结合研究问题的实际应用意义以及各方面的可行性，本文对如何为用户进行机票方案的个性化推荐展开研究。论文主要提出一套契合在线机票业务场景的数据预处理、分析与推荐算法。首先根据用户的历史订单数据建立用户的偏好模型，并结合机票的特征内容，为用户准确、高效地推荐合适的机票。此外，本文还结合了其他相关领域的研究成果，对一些细粒度的场景提出了更具针对性的推荐策略，进一步提升了机票推荐效果。
 
 \section{国内外研究现状}
 \subsection{机票个性化推荐的研究现状}
-近年来，机票领域的推荐产生了一些学术研究成果，在业界也得到了广泛的应用。个人旅行助手(Personal Travel Assistant, PTA)\cite{coyle2004making} 使用基于案例推理（Case Based Reasoning）\cite{aamodt1994case,kolodner2014case}方法来降低学习用户偏好带来的认知负荷。系统考虑了机票的高度结构化的特性，提出了机票特征维度相似性衡量方法、根据用户隐式反馈为用户建立特征偏好模型的方法以及结构化进行案例存储的方法。该方法将用户的历史订单数据作为案例进行存储，当需要为用户进行机票推荐时，将所有候选机票与存储的案例进行相似性比较，为用户推荐最相似的一张机票。
+近年来，机票领域的推荐产生了一些学术研究成果，在业界也得到了广泛的应用。个人旅行助手(Personal Travel Assistant, PTA)\cite{coyle2004making} 使用基于案例推理（Case Based Reasoning）\cite{aamodt1994case,kolodner2014case}方法来降低学习用户偏好带来的认知负荷。系统考虑了机票的高度结构化的特性，提出了机票特征维度相似性衡量方法、根据用户隐式反馈为用户建立特征偏好模型的方法以及结构化地进行案例存储的方法。该方法将用户的历史订单数据作为案例进行存储，当需要为用户进行机票推荐时，根据相似度将所有候选机票与存储的案例进行比较，为用户推荐最相似的一张机票。
 
 航班推荐引擎(Flight Recommender Engine, FRE)\cite{barth2014design}是Amadeus公司开发的一套系统，主要功能是为用户推荐合适的航班。系统充分利用了领域知识，将航班的属性抽取出26个维度，使用加权的欧氏距离衡量航班的相似性。系统将用户的出发地、到达地和时间作为限制条件，从数据库中选取与用户条件距离最小的N条数据作为推荐结果展示给用户。
 
-与此相关，旅游方案推荐领域也有很多学术研究成果。旅游方案推荐主要使用基于内容的方法，对机票推荐也有很大的借鉴作用。一项对Tripadvisor\footnote{\url{www.tripadvisor.com}}网站数据的研究对基于内容的推荐提出了一些创新。通常，基于内容的方法都需要对内容进行过滤，只选出与该次推荐上下文内匹配的内容，如果内容的维度越高，则推荐结果数据的稀疏度越高，会对推荐的准确性造成影响。在这项研究中采用了内容松弛的方法，降低对推荐结果的内容约束，只提取几个维度的关键内容，同时将这些关键内容约束应用于基于用户的协同过滤的步骤，提出一种新型混合推荐方法，实验效果比单一的基于内容推荐有所提升。
+与此相关，旅游方案推荐领域也有很多学术研究成果。旅游方案推荐主要使用基于内容的方法，对机票推荐也有很大的借鉴作用。一项对Tripadvisor\footnote{\url{www.tripadvisor.com}}网站数据的研究对基于内容的推荐提出了一些创新。通常，基于内容的方法都需要对内容进行过滤，只选出与该次推荐上下文内匹配的内容，如果内容的维度越高，则推荐结果数据的稀疏度越高，会降低推荐结果的准确性。在这项研究中采用了内容松弛的策略，降低了过滤规则中的内容约束，只提取几个维度的关键特征，将这些关键特征的约束与基于用户的协同过滤推荐进行结合，提出一种新型混合推荐算法，实验效果比单一的基于内容推荐有所提升。
 
-在工业界，个性化机票推荐也得到了广泛的应用。例如携程网\footnote{\url{www.ctrip.com}}、Bookairfare\footnote{\url{www.bookairfare.com}}、AirFareExperts\footnote{\url{www.airfareexperts.com}}等。其中，我们使用携程网主要进行国内机票预定，而使用Bookairfare、AirFareExperts网站往往需要出境、转机。携程网通过分析用户历史订单以及用户年龄、性别、位置等信息，为用户建立画像模型，并展现个性化的置顶推荐航班，取得了良好的效果。除此之外，携程网还上线了接送机、机加铁、wifi、酒店等以机票为中心的一系列跨领域推荐。Bookairfare、AirFareExperts网站则结合用户的地理位置、时间等约束条件，为用户推荐最合理的出行周转方案。
+在工业界，机票推荐也得到了广泛的应用。例如携程网\footnote{\url{www.ctrip.com}}、Bookairfare\footnote{\url{www.bookairfare.com}}、AirFareExperts\footnote{\url{www.airfareexperts.com}}等。其中，我们使用携程网主要进行国内机票预定，而使用Bookairfare、AirFareExperts网站往往需要出境、转机。携程网通过分析用户历史订单以及用户年龄、性别、位置等信息，为用户建立画像模型，并展现个性化的置顶推荐航班，取得了良好的效果。除此之外，携程网还上线了接送机、机加铁、wifi、酒店等以机票为中心的一系列跨领域推荐。Bookairfare、AirFareExperts网站则结合用户的地理位置、时间等约束条件，为用户推荐最合理的出行周转方案。
 
 \subsection{一般推荐系统的研究现状}
 
-二十世纪九十年代明尼苏达大学GroupLens研究组推出的GroupLens系统\cite{konstan1997grouplens}标志着推荐系统的诞生。推荐系统需要根据用户个人的偏好并结合商品的属性进行推荐，依赖于用户历史行为数据与相关专业领域知识。用户行为数据在个性化推荐系统中一般分为显式反馈行为和隐式反馈行为\cite{oard1998implicit,lin2001characterized}。显式反馈可以明确地表示用户对物品喜好与否，
-常见的方式为用户对物品进行评分。隐式反馈不能直接表达用户对物品的喜爱程度，例如在电子商务网站中，用户对商品的点击、添加购物车等行为。显式反馈行为通常需要用户的主动参与，因而与显式反馈相比，隐式反馈行为更为普遍，也可以产生更多的用户数据，但隐式反馈通常只包含正反馈，如果用户对一项物品产生行为，通常代表用户对该物品有所偏好。若用户没有对一项物品产生行为，则不能认为用户不偏好该物品。显式反馈则可以根据用户的评分高低，同时包含正负反馈。论文中研究的机票推荐算法只有隐式反馈数据。按照推荐算法基于的信息数据，推荐系统主要分为协同过滤\cite{breese1998empirical}、基于内容推荐\cite{pazzani1999framework,claypool1999combining}以及混合过滤\cite{soboroff1999combining}。
-		
-协同过滤算法是推荐系统研究中最基本的方法，对显式反馈和隐式反馈都适用。在协同过滤中，物品的相关性不是通过物品自身的内容属性决定的，而是由大量用户-物品行为决定，因此这类方法对领域业务知识的要求较少。协同过滤又包括很多子类，例如：基于用户的推荐\cite{babu2011implementation}、基于物品的推荐\cite{sarwar2001item,linden2003amazon}、基于社会关系的推荐\cite{asabere2015socially,massa2007trust}。
-协同过滤的基本假设是“用户会喜欢与他具有相似偏好(相近社会关系)的用户喜欢的物品”以及“用户会喜欢与他喜欢的物品具有较高相似性的物品”。在这种方法中，用户-物品行为可以生成一个矩阵，每位用户对应行向量，每个物品对应列向量，每个元素表示用户对物品的行为，包括显式反馈的评分或隐式反馈的行为记录等。用户或物品之间的相似性通常由向量的余弦\cite{goshtasby2012similarity}计算。
-它的优点是在数据充足的情况下具有较高的准确率，并且可以对物品的相关性和用户的偏好进行充分的隐式挖掘。但是却面临数据稀疏和冷启动的问题，庞大的计算量也限制了算法的扩展性。
-		
-基于内容的推荐需要分别提取物品特征和建立用户兴趣档案，其核心思想就是计算候选物品特征与目标用户的兴趣档案的相似度。其中，提取物品特征通常需要丰富的领域知识。最基本的用户兴趣档案可以通过对用户有过行为的物品特征进行加权得到。除此之外，还可以考虑用户行为的时间因素、用户在本次交互中收集到的即时数据等。基于内容的推荐可以克服新物品冷启动问题、数据稀疏问题，并且推荐结果是可解释的。但是为了提取物品的特征需要丰富的领域知识，对于不同的领域甚至需要提取完全不同的特征维度，并且往往需要大量人工干预。其训练模型的通用性也不是很强，对于不同的数据源可能需要不同的模型。
+二十世纪九十年代明尼苏达大学GroupLens研究组推出的GroupLens系统\cite{konstan1997grouplens}标志着推荐系统的诞生。推荐系统需要根据用户个人的偏好并结合商品的内容进行推荐，依赖于用户历史行为数据与相关专业领域知识。用户行为数据一般分为显式反馈行为和隐式反馈行为\cite{oard1998implicit,lin2001characterized}。显式反馈可以明确地表示用户对物品喜好与否，常见的方式为用户对物品进行评分。隐式反馈，例如用户对商品的点击、收藏等行为，通常不能直接表达用户对物品的喜爱程度。显式反馈通常需要用户的主动参与，因而与显式反馈相比，隐式反馈行为更为普遍，也可以产生更多的用户数据，但隐式反馈通常只包含正反馈，如果用户对一项物品产生行为，通常代表用户对该物品有所偏好，反之，却不能认为用户不偏好该物品。显式反馈则可以根据用户的评分高低，同时包含正负反馈。论文中研究的机票推荐算法只有隐式反馈数据。按照算法基于的信息数据，推荐系统主要分为协同过滤\cite{breese1998empirical}、基于内容推荐\cite{pazzani1999framework,claypool1999combining}以及混合过滤\cite{soboroff1999combining}。
 
-混合过滤推荐将协同过滤和基于内容推荐结合起来，基于用户和物品的数据进行物品推荐。例如，为了在社交网络中向用户推荐好友\cite{portugal2015use}，推荐系统首先可以使用协同过滤的方法，根据用户之间兴趣的相似度为用户挑选具有相似兴趣的好友档案。然后，系统将这些档案视作物品，使用基于内容的推荐算法，根据这些档案的信息搜索新的相似的档案。最终，两个档案的合集可作为推荐结果展示给用户。
+协同过滤是推荐系统研究中最常见的方法，对显式反馈和隐式反馈都适用。在该算法中，物品的相关性不是通过物品自身的内容属性决定的，而是由大量用户-物品行为决定，因此这类方法对领域业务知识的要求较少。协同过滤又包括很多子类，例如：基于用户的推荐\cite{babu2011implementation}、基于物品的推荐\cite{sarwar2001item,linden2003amazon}、基于社会关系的推荐\cite{asabere2015socially,massa2007trust}。协同过滤的基本假设是“用户会喜欢与他具有相似偏好(相近社会关系)的用户喜欢的物品”以及“用户会喜欢与他喜欢的物品具有较高相似性的物品”。在这种方法中，用户-物品行为可以生成一个矩阵，每位用户对应行向量，每个物品对应列向量，每个元素表示用户对物品的评价或行为行为。用户或物品之间的相似性通常由向量的余弦\cite{goshtasby2012similarity}计算。它的优点是在数据充足的情况下具有较好的推荐效果，并且可以对物品的相关性和用户的偏好进行充分的隐性挖掘，但面临数据稀疏和冷启动的问题，庞大的计算量也限制了算法的扩展性。
+		
+基于内容的推荐需要分别提取物品特征和建立用户兴趣档案，其核心思想就是计算候选物品特征与目标用户的兴趣偏好的相似度。其中，提取物品特征通常需要丰富的领域知识。最基本的用户偏好模型可以通过对用户有过历史行为记录的物品特征进行归纳得到。除此之外，还可以考虑用户行为的时间因素、用户在本次交互中收集到的即时数据等。基于内容的推荐可以克服新物品冷启动问题、数据稀疏问题，并且推荐结果是可解释的。但是为了提取物品的特征需要丰富的领域知识，对于不同的领域甚至需要提取完全不同的特征维度，并且往往需要大量人工干预。其训练模型的通用性也不是很强，对于不同的数据源可能需要不同的模型。
+
+混合过滤推荐将协同过滤方法和基于内容推荐结合起来，基于用户和物品的数据进行物品推荐。例如，为了在社交网络中向用户推荐好友\cite{portugal2015use}，推荐系统首先可以使用协同过滤的方法，根据用户的兴趣爱好为用户挑选具有相似兴趣的好友档案。然后，系统将这些档案视作物品，使用基于内容的推荐算法，为用户筛选新的相似的档案。最终，两个档案的合集可作为推荐结果展示给用户。
 
 \section{机票推荐研究的现存问题}
 
 
-当前在机票个性化推荐研究工作中仍存在以下问题。分别是用户冷启动问题\cite{schein2002methods}和共享账户问题\cite{weston2013nonlinear}。
+当前在机票推荐研究领域中仍存在以下问题。分别是用户冷启动问题\cite{schein2002methods}和共享账户问题\cite{weston2013nonlinear}。
 
 \subsection{用户冷启动问题}
 
-为了向用户推荐物品，系统需要根据用户的历史记录为用户偏好进行建模。对于新加入的用户，由于其行为记录较为稀缺，推荐系统难以获取用户的兴趣所在，进而影响到推荐效果。系统可以利用用户的从众心理，简单地将最热门\cite{sun2012survey}的物品推荐给用户，但这种做法削弱了推荐过程中对个体差异的考虑。也可以在用户初次访问系统时向用户展示调查问卷，通过收集用户的回复来分析用户偏好，如Jester\cite{goldberg2001eigentaste}笑话推荐系统在用户初次访问时，要求用户对一些笑话的幽默程度进行评价，但这种策略需要用户的参与。
+为了向用户推荐物品，系统需要根据用户对物品的历史行为记录为用户的偏好进行建模。对于新加入的用户，由于其行为记录较为稀缺，推荐系统难以获取用户的兴趣所在，进而影响到推荐效果。系统可以利用用户的从众心理，简单地将最热门\cite{sun2012survey}的物品推荐给用户，但这种做法削弱了推荐过程中对个体差异的考虑。也可以在用户初次访问系统时向用户展示调查问卷，通过收集用户的回复来分析用户偏好，如Jester\cite{goldberg2001eigentaste}笑话推荐系统在用户初次访问时，要求用户对一些笑话的幽默程度进行评价，但这种策略需要用户的参与。
 
-在机票推荐领域，如果用户的历史订单较少，就不能为用户建立精确的偏好模型。由于用户的偏好差异很大，并且机票的热门程度受制于航班的舱位数量，难以应用基于热门程度的推荐策略。而为冷启动用户设计调查问卷则会降低用户体验，可能对网站转化率造成影响。在本文的研究中，我们注意到用户在航线间的偏好存在一定的相似性，因此可以通过借鉴用户在相似航线上的偏好进行机票推荐。另外，我们还注意到用户和乘客之间并非是一一对应的关系，可以通过乘客之间的联系为用户建立社会关系\cite{sedhain2014social}，假设具有社会关系的用户也具有相似的偏好，就可以借鉴与用户社会关系密切的其他用户为其提供机票推荐。
+在机票推荐领域，如果用户的历史订单较少，就不能为用户建立精确的偏好模型。由于用户的偏好差异很大，并且机票的热门程度受制于航班的舱位数量，难以应用基于热门程度的推荐策略。而为冷启动用户设计调查问卷则会降低用户体验，可能对网站转化率造成影响。在本文的研究中，我们注意到用户在航线间的偏好存在一定的相似性，可以对用户在相似航线的偏好进行借鉴，从而为用户提供机票推荐。另外，我们还注意到用户和乘客之间并非是一一对应的关系，可以通过乘客之间的联系为用户建立社会关系\cite{sedhain2014social}，假设具有社会关系的用户也具有相似的偏好，就可以借鉴与用户社会关系密切的其他用户为其提供机票推荐。
 
 \subsection{共享账户问题}
 
 在传统的推荐系统中，普遍认为每个账户仅具有一位成员，即一个账户代表一个偏好模型\cite{kabutoya2010modeling}。而在有些情景下，账户可能供多位成员使用，例如购物网站的账户通常会为一个家庭购买物品。如果能够对账户下的成员进行区分，就可以为每位成员建立精确的偏好模型，进而提升推荐效果。常用的解决共享账户问题的方法包括利用上下文信息识别成员\cite{adomavicius2011context}以及利用账户下不同的物品集合\cite{verstrepen2015top}表达偏好模型的差异。
 
-机票订购网站的账户可以为多位的乘客购票，不同乘客之间的偏好可能存在差异，因而会对推荐准确率造成影响。与一般的推荐场景不同的是，用户在提交订单后还需要填写乘客信息，因此每个账户中的乘客以及每条订单的参与者都是明确的。如果我们能够识别出参与本次订票的乘客，就可以提供更有针对性的推荐结果。
+机票订购网站的账户可以为多位的乘客购票，不同乘客之间的偏好可能存在差异，因而会影响到机票推荐的准确率。与一般的推荐场景不同的是，用户在提交订单后还需要填写乘客信息，因此每个账户中的乘客以及每条订单的参与者都是明确的。如果我们能够识别出参与本次订票的乘客，就可以提供更有针对性的推荐结果。
 在本文的研究中，我们结合用户历史行为记录与当次购票的上下文计算出乘客分布概率，并将乘客预测结果融合到机票推荐的过程中，以提升机票推荐效果。
 
 
@@ -73,7 +70,7 @@
 
 2.提出解决机票推荐冷启动问题的方法
 
-分析了航线分布的差异及其对机票推荐准确率的影响，提出机票推荐场景中的冷启动问题。针对航线冷启动和用户冷启动两种情况进行分析。对于前者，根据航线特征分布和用户行为集中程度衡量航线间相似度，为用户构建修正混合模型。对于后者，根据用户与乘客的多种对应关系，结合共同乘客和同乘关系组成用户间的社会关系，提出增强用户模型的算法。
+分析了航线分布的差异及其对机票推荐准确率的影响，提出机票推荐场景中的冷启动问题。针对航线冷启动和用户冷启动两类问题进行分析。对于前者，根据航线特征分布和用户行为集中程度衡量航线间相似度，为用户构建修正混合模型。对于后者，根据用户与乘客的多种对应关系，结合共同乘客和同乘关系组成用户间的社会关系，提出增强用户模型的算法。
 
 
 3.提出结合共享账户乘客预测的机票推荐算法
@@ -82,23 +79,22 @@
 
 4.提出结合隐性特征的机票推荐算法
 
-通过分析节假日、周末以及工作日的机票推荐准确率，验证了用户在不同起飞日期的行为变化。为了使用户偏好模型能够反映其行为变化，我们为机票的显性特征增加了起飞时间类型，并建立了转换矩阵将用户模型和机票内容映射到隐性空间。通过参数训练得到用户在隐性空间的偏好模型。综合了用户显性偏好模型和隐性偏好模型，得到最终机票推荐结果。
+通过分析节假日、周末以及工作日的机票推荐准确率，验证了用户在不同起飞日期的行为变化。为了使用户偏好模型能够反映其行为变化，我们为机票增加了起飞时间这一特征，并建立了转换矩阵将用户模型和机票内容映射到隐性空间。通过参数训练得到用户在隐性空间的偏好模型。综合了用户显性偏好和隐性偏好，得到最终机票推荐结果。
 
 
 \subsection{文章结构安排}
 本文共七个章节，文章结构安排如下：
 
-第一张绪论，从业务应用场景分析了研究问题的应用意义及遇到的挑战。并从概括性的系统角度对研究内容的各方面可行性进行分析。其后，从学术研究和产业应用两个层面介绍了推荐系统和机票推荐的国内外研究现状。分析了机票推荐中目前存在的问题并在本文研究中予以分析、解决。最后，章节对本文主要研究工作进行简要介绍。
+第一张绪论，从业务应用场景分析了研究问题的应用意义及遇到的挑战，并从多方面系统地分析了研究问题的可行性。其后，从学术研究和产业应用两个层面介绍了推荐系统和机票推荐的国内外研究现状。分析了机票推荐中目前存在的问题并在本文研究中予以分析、解决。最后，章节对本文主要研究工作进行简要介绍。
 
-第二章相关技术，介绍了本文工作中涉及到的相关研究领域。本章中依次介绍了基于内容推荐、协同过滤推荐以及主题模型等相关技术。这些技术分别是后续各章节中本文展开研究工作的理论基础。
+第二章相关技术，介绍了文章研究中涉及的相关研究技术领域。本章中依次介绍了基于内容推荐、协同过滤推荐以及主题模型等相关技术。这些技术分别是后续各章节中本文展开研究工作的理论基础。
 
 第三章机票数据介绍及基于特征分布的推荐算法。首先介绍了研究使用的数据，并结合业务经验知识提取机票数据中的重要特征。其次我们对机票推荐的场景进行介绍，该场景将贯穿后续章节。其后，构建了用户特征分布模型，根据衡量信息丰富度的熵值理论计算了用户对每个特征的偏重程度，组成完整的个性化机票推荐方法。在实验阶段，我们提取了一些热门航线，分析用户和订单的分布，进行机票推荐实验，并与两种基础的推荐策略进行了对比。在后续章节中，我们以此方法作为基线推荐算法，细化应用场景，深入研究，进一步提升个性化机票推荐的准确率。
 
-第四章机票推荐中的冷启动问题。通过分析航线间的特征分布和用户行为差异，以及这些差异对推荐结果的影响，提出了机票推荐中的冷启动问题。我们首先研究了航线冷启动问题，即用户在目标航线上的训练订单数量不足，而在别的航线上有一定数量的训练订单。我们关注用户在其他航线上的特征分布模型，通过比较航线间的相似度，选出最优相似航线，得到用户修正混合模型。我们还研究了用户冷启动问题，这类用户在所有航线上的训练订单数量都不足。我们通过分析用户与乘客的对应关系，通过共同乘客和同乘关系为用户建立社会关系。我们分别对这两种方法进行实验验证与评价。
+第四章机票推荐场景中的冷启动问题。通过分析航线间的特征分布和用户行为差异，以及这些差异对推荐结果的影响，提出了机票推荐中的冷启动问题。我们首先研究了航线冷启动问题，即用户在本航线上的训练订单数量不足，而在其他航线上有一定数量的训练订单。我们关注用户在其他航线上的特征分布模型，通过比较航线相似度，选出最优相似航线，得到用户修正混合模型。我们还研究了用户冷启动问题，这类用户在所有航线上的训练订单数量都不足。我们通过分析用户与乘客的对应关系，通过共同乘客和同乘关系为用户建立社会关系。我们分别对这两种方法进行实验验证与评价。
 
-第五章结合共享账户的机票推荐算法。本章我们研究了账户中的乘客共享账户问题。在可以获取乘客身份信息的前提下，将作者-主题模型应用到乘客预测中。首先预定义特征词库，每条订单都使用词汇的集合表示。在模型训练过程中，每个账户下的订单视作一个语料库，每条订单视作一个文档，并将乘客视为作者。完成模型训练后，就当前会话的上下文信息计算出乘客预测概率分布。并将乘客预测结合到机票推荐过程中。
-在实验阶段，我们对乘客预测准确率和结合乘客预测的机票推荐准确率进行实验及分析，并与第三章提出的机票推荐方法进行对比。
+第五章结合共享账户的机票推荐算法。本章我们研究了账户中的乘客共享账户问题。在可以获取乘客身份信息的前提下，将作者-主题模型应用到乘客预测中。首先预定义特征词库，每条订单都使用词汇的集合表示。在模型训练过程中，每个账户下的订单视作一个语料库，每条订单视作一个文档，并将乘客视为作者。完成模型训练后，就当前会话的上下文信息计算出乘客预测概率分布。并将乘客预测结合到机票推荐过程中。在实验阶段，我们对乘客预测准确率和结合乘客预测的机票推荐准确率进行实验及分析，并与第三章提出的机票推荐方法进行对比。
 
-第六章结合隐性特征的机票推荐算法。研究了用户在不同起飞日期的行为变化对个性化机票推荐准确率带来的影响。而基于显性特征的用户偏好模型无法反映用户行为变化。我们为机票特征添加了起飞时间类型，并建立了转换矩阵将用户模型和机票内容映射到隐性空间。定义了模型的目标函数，并使用基于偏好排序的抽样方法进行梯度下降参数训练。我们对该模型的推荐准确率进行实验及分析，并与第三章提出的机票推荐方法进行对比。
+第六章结合隐性特征的机票推荐算法。研究了用户在不同起飞日期的行为变化对机票推荐效果的影响。基于显性特征的用户特征分布模型无法反映用户行为变化。我们为机票添加了起飞时间这一特征，并建立了转换矩阵将用户模型和机票内容映射到隐性空间。定义了模型的目标函数，并使用基于偏好排序的抽样方法进行梯度下降参数训练。最后，对该模型的推荐准确率进行实验及分析，并与第三章提出的机票推荐方法进行对比。
 
-第七章全文总结及展望。总结了论文的主要研究内容及完成的工作，提出了当前研究中的不足，并提出了未来的深入研究方向及展望。
+第七章全文总结及展望。总结了论文的主要研究工作，分析了当前研究中的存在不足，指明了未来进行深入研究的方向。
