--- a/tex/05_share.tex
+++ b/tex/05_share.tex
@@ -7,7 +7,7 @@
 
 \section{机票推荐中的共享账户}
 
-以协同过滤和基于内容推荐两类算法为代表的传统推荐系统通常以用户在网站的注册ID（账户）来识别用户，它们一般假定一个用户背后只有一个使用者，即每个用户仅包含一个固定的偏好模型。然而在很多领域，都会发生现实中几个人共同使用一个账户的情景。例如，在购物网站，可能一个家庭共用一个账户，每位家庭成员都可以使用这个账户进行购物；在一般的线旅行票务服务网站，例如机票、酒店、旅游等业务领域，一个账户中也可能会有几个成员，他们可能会为家人、旅伴购票。
+传统推荐系统通常以用户在网站的注册ID（账户）来识别用户，它们一般假定一个用户背后只有一个使用者，即每个用户仅包含一个固定的偏好模型。然而在很多领域，都会发生现实中几个人共同使用一个账户的情景。例如，在购物网站，可能一个家庭共用一个账户，每位家庭成员都可以使用这个账户进行购物；在一般的线旅行票务服务网站，例如机票、酒店、旅游等业务领域，一个账户中也可能会有几个成员，他们可能会为家人、旅伴购票。
 
 
 第一种情形中，虽然会有几位家庭成员共同使用账户购物，但是服务商无法获取购物者的真实身份信息。而对于第二种情形，如图\ref{fig:fill_id}所示，乘客在订票后会被要求填写身份信息，因此，网站可以获取其真实身份。在机票数据集中，订单包含了每一位乘客的身份信息，包括姓名、性别、年龄、证件号码等。在我们进行数据分析与实验过程中，统一使用加密后的证件号码来代指乘客，既确保了乘客之间无冲突，又保护了乘客隐私。
@@ -25,12 +25,12 @@
 在机票的乘客预测模型中，我们使用了作者主题模型（ATM）\cite{rosen2004author,steyvers2004probabilistic,rosen2010learning}来分析乘客的行为模型。主题模型是一种生成模型，其主要观点是一篇文档可以抽取出混合的多个主题。作者主题模型在文章-主题的基础上又添加了作者-主题的关系。每个账户独立进行模型训练，可以将每个账户视为一个语料库。账户中出现过的所有乘客视为每位作者，每条机票订单视为一篇文档， 机票中的每个特征以及上下文信息视为预定义的词库。如果出现一张机票有多个乘客的情况，我们将他们视为共同作者。
 
 \section{乘客预测模型}
-事实上，主题模型在推荐系统中的应用很广泛。例如，在PLSA模型中，每个物品可以视作一个词汇，主题服从对物品的多项式分布，每个主题代表了一种隐性特征。每用户的偏好模型都服从对主题的多项式分布。用户的每次购买行为都可以被看作从该用户中抽样一个主题$Z$，再从该主题中抽取一个词汇的过程。由于机票具有动态属性，很难将不同价格的机票定义为同一个物品；并且每类机票的数量受限于飞机的型号，因此上述pLSA模型很难用到机票推荐领域中。
+事实上，主题模型在推荐系统中的得到广泛地应用。例如，在PLSA模型中，每个物品可以视作一个词汇，主题服从对物品的多项式分布，每个主题代表了一种隐性特征，用户的偏好模型服从对主题的多项式分布。用户的每次购买行为都可以被看作从该用户中抽样一个主题，再从该主题中抽取一个词汇的过程。由于机票具有动态属性，很难将不同价格的机票定义为同一个物品；并且每类机票的数量受限于飞机的型号，因此上述pLSA模型很难用到机票推荐领域中。
 
 \subsection{模型描述及表示}
 
-在作者主题模型中，我们用机票在每个特征离散化后的取值来预定义一个词库。这个词库包含了机票在任一特征中所有可能出现的值，使用从0开始的索引来代指每一个词汇。至此，每一张机票都可以表示为词汇的集合，我们将每条订单视作一篇文档，显然，所有订单文档中的的词汇数量都是相同的。每个主题都由词汇的多项式分布表示；类似地，每个乘客由主题的多项式分布表示。因此
-ATM模型可以对文档（订单）进行降维。通过模型训练，可以计算出乘客与主题之间的分布参数以及主题与词汇之间的分布参数。表\ref{tab:notation}描述了我们本章使用的符号表。
+在作者主题模型中，我们用机票在每个特征离散化后的取值来预定义一个词库。这个词库包含了机票在任一特征中所有可能出现的值，使用从0开始的索引来代指每一个词汇。至此，每一张机票都可以表示为词汇的集合，我们将每条订单视作一篇文档，显然，所有订单中的的词汇数量是相同的，每个主题都表示为词汇的多项式分布，每个乘客都表示为主题的多项式分布。因此
+ATM模型可以对文档（订单）进行降维。通过ATM模型训练，可以计算出乘客与主题之间的分布参数以及主题与词汇之间的分布参数。表\ref{tab:notation}描述了我们本章使用的符号表。
 
 \begin{table}[!hpb]
 \centering
@@ -83,7 +83,7 @@ $K$ & 主题数量\\ \hline
 图\ref{fig:pro_graph}展示了作者主题模型的概率图。带阴影的变量是已知变量；其余是未知变量。每个方框代表一个过程，其右下角的数字是这个过程的循环次数。箭头连接线代表了变量间的条件依赖关系。这个图直观、清晰地表现了生成一条订单文档的过程。
 
 \subsection{模型参数推导}
-在上节的模型描述中，我们介绍了作者主题模型的两个参数矩阵，分别是包含$P$位乘客的乘客-主题分布参数以及包含$K$个主题的主题-词汇分布。有一些算法可以用来推导这些参数，如EM算法、Gibbs采样\cite{george1993variable}等。传统的EM算法可能会陷入局部最优问题，并且这种算法的计算复杂性较高。本章，我们使用Gibbs采样的算法，这种算法不直接进行参数推导，而通过计算抽取的乘客和主题的后验分布，对参数进行更新。因此计算过程较为简单。
+在上节的模型描述中，我们介绍了作者主题模型的两个参数矩阵，分别是包含$P$位乘客的乘客-主题分布参数以及包含$K$个主题的主题-词汇分布。有一些算法可以用来推导这些参数，如EM算法、Gibbs采样\cite{george1993variable}等。传统的EM算法可能会产生局部最优问题，并且这种算法的复杂性较高。本章，我们使用Gibbs采样的算法，这种算法不直接进行参数推导，而通过计算抽取的乘客和主题的后验分布，对参数进行更新。因此计算过程较为简单。
 
 
 \begin{eqnarray}
@@ -97,11 +97,11 @@ P(z_{oi}=t|x_{oi}=p,\Theta)P(x_{oi}=p|p_o) \nonumber \\
 
 
 式\ref{eq:all_pro}描述了在参数矩阵$\Theta$，$\Phi$和乘客集合$P$的条件下，生成一条机票订单的概率函数。在这个生成模型中，$P(w_{oi}|z_{oi}=t,\Phi)$是在选定主题的条件下，根据主题-词汇分布矩阵抽取单词的概率。
-$P(z_{oi}=t|x_{oi}=p,\Theta)$是在选定乘客的条件下，根据乘客-主题分布矩阵抽取主题的概率。$P(x_{oi}=p|p_o)$是乘客集合中以服从均匀分布抽取乘客的概率。这个等式可以看作生成一条订单的似然函数。
-如果将参数$\Theta$，$\Phi$视为随机变量，我们训练模型的目标就是训练变量，
-使概率函数具有最大后验分布(MAP, Maximum A Posteriori)。 
+$P(z_{oi}=t|x_{oi}=p,\Theta)$是在选定乘客的条件下，根据乘客-主题分布矩阵抽取主题的概率。$P(x_{oi}=p|p_o)$是乘客集合中以服从均匀分布抽取乘客的概率。该等式可以看作生成一条订单的似然函数。
+如果将参数$\Theta$，$\Phi$视为随机变量，我们的目标就是通过参数估计，
+使似然函数得到最大后验分布(Maximum A Posteriori，MAP)。 
 
-在Gibbs采样的过程中，为了从联合分布$P(\mathbf{z},\mathbf{x}|\alpha,\beta)$中取样，我们需要为每一个单词$w_{di}$赋值一个主题$z_{di}$以及乘客$x_{di}$。在训练过程中，一个账户下的所有单词都会被取样一次。当所有单词都训练过，称为一个训练批次。通常，我们需要将模型训练数个批次。$p(\Theta,\Phi|\mathbf{z},\mathbf{x},\alpha,\beta)$可以根据狄利克雷和多项式分布互成共轭分布的性质来计算。为每个单词抽取的乘客、主题可以使用下式进行计算：
+在Gibbs采样的过程中，为了从联合分布$P(\mathbf{z},\mathbf{x}|\alpha,\beta)$中取样，我们需要为每一个单词$w_{di}$赋值一个主题$z_{di}$以及乘客$x_{di}$。在训练过程中，一个账户下的所有单词都会被取样一次。当所有单词都训练过，称为一个训练批次，通常我们需要将模型训练数个批次。$p(\Theta,\Phi|\mathbf{z},\mathbf{x},\alpha,\beta)$可以根据狄利克雷与多项式分布互成共轭分布的性质来计算。为每个单词抽取的乘客、主题可以使用下式进行计算：
 
 \begin{eqnarray}
 \label{eq:pro_pass_top}
@@ -109,7 +109,7 @@ P(x_{oi}=p,z_{oi}=t|w_{oi}=w,\mathbf{z}_{-oi},\mathbf{x}_{-oi},\mathbf{w}_{-oi},
 \propto \frac{C_{tp}^{TP}+\alpha}{\sum{t'}C_{t'p}^{TP}+T\alpha}\frac{C_{wt}^{WT}+\beta}{\sum_{w'}C_{w't}^{WT}+W\beta}
 \end{eqnarray}
 
-式\ref{eq:pro_pass_top}代表为订单$o$的第$i$个单词赋予乘客$p$和主题$t$的概率。$C^{WT}$ 是单词-主题分布矩阵，其每行对应一个单词，每列对应一个主题，每个元素代表当前单词被赋予当前主题的次数。$C_{wt}$是除了当前单词之外，单词$w$被赋予主题$t$的次数。$C^{TP}$是主题-乘客分布矩阵，其每行对应一个主题，每列对应一个乘客，矩阵中每个元素代表该乘客在当前主题包含的单词个数。$C_{tp}$代表乘客$p$在主题$t$包含的词汇个数，同样排除了当前单词。我们可以根据抽样的过程对主题-词汇分布参数以及乘客-主题分布参数进行更新：
+式\ref{eq:pro_pass_top}代表为订单$o$的第$i$个单词赋予乘客$p$和主题$t$的概率。$C^{WT}$ 是单词-主题分布矩阵，其每行对应一个单词，每列对应一个主题，每个元素代表当前单词被赋予当前主题的次数。$C_{wt}$是除了当前单词之外，单词$w$被赋值到主题$t$的次数。$C^{TP}$是主题-乘客分布矩阵，其每行对应一个主题，每列对应一个乘客，矩阵中每个元素代表该乘客在当前主题包含的单词个数。$C_{tp}$代表乘客$p$在主题$t$生成的词汇个数，同样排除了当前单词。我们可以根据抽样的过程对主题-词汇分布参数以及乘客-主题分布参数进行更新：
 
 \begin{equation}
 \label{eq:es_the}
@@ -126,9 +126,9 @@ P(x_{oi}=p,z_{oi}=t|w_{oi}=w,\mathbf{z}_{-oi},\mathbf{x}_{-oi},\mathbf{w}_{-oi},
 我们需存储上文提到的$C^{TP}$和$C^{WT}$两个矩阵，以及每条订单中每个单词的主题和乘客两个列表。
 
 
-模型训练主要包括三个步骤，分别是初始化，取样以及参数更新。在初始化过程中，我们为语料库中每条订单文档的每个单词随机分配主题和乘客。然后我们需要统计词汇表中每个单词被赋予某个主题的次数以及每个乘客在每个主题下的词汇的个数。在每次取样过程中，我们根据式\label{eq:p_xz}为语料库中的每个单词计算每个主题以及乘客的联合概率分布。我们根据概率为该单词采样新的主题和乘客。在几个批次的迭代训练后，可以根据式式\ref{eq:es_the}和\ref{eq:es_phi}对参数矩阵$\Theta$，$\Phi$进行更新。
+模型训练主要包括三个步骤，分别是初始化，取样以及参数更新。在初始化过程中，我们为账户中每条订单的每个词汇随机分配主题和乘客。然后我们需要统计词汇表中每个单词被赋予某个主题的次数以及每个乘客在每个主题下的词汇的个数。在每次取样过程中，我们根据式\label{eq:p_xz}为语料库中的每个单词计算每个主题以及乘客的联合概率分布。我们根据概率为该单词采样新的主题和乘客。在几个批次的迭代训练后，可以根据式式\ref{eq:es_the}和\ref{eq:es_phi}对参数矩阵$\Theta$，$\Phi$进行更新。
 
-在最差情况下，模型每批迭代的时间复杂度是$O(NK|P|)$。其中$N$是一个账户下所有订单的总词汇数量。$|P|$是该账户下乘客最多的订单中乘客的数量，一般不会很大，与订单的总词汇数量相比可以视作常量。$K$是模型的主题数量。主题数量的取值不是固定的，我们可以在实验中确定最适合机票推荐业务中，乘客预测模型的数量。在模型迭代过程中，$|P|$以及$K$都可以看作常量，因此，使用Gibbs采样训练ATM模型的时间复杂度可以看作与总订单词汇数量$N$呈线性关系，可以用在大量用户数据的训练任务中。
+在最差情况下，每批参数估计的时间复杂度为$O(NK|P|)$。其中$N$是一个账户下所有订单的总词汇数量。$|P|$是该账户下乘客最多的订单中乘客的数量，一般不会很大，与订单的总词汇数量相比可以视作常量。$K$是模型的主题数量。主题数量的取值不是固定的，我们可以在实验中确定最适合机票推荐业务中，乘客预测模型的数量。在模型迭代过程中，$|P|$以及$K$都可以看作常量，因此，使用Gibbs采样训练ATM模型的时间复杂度可以看作与总订单词汇数量$N$呈线性关系，可以用在大量用户数据的训练任务中。
 
 \begin{algorithm}
 \caption{Training of ATM}
@@ -171,7 +171,7 @@ P(x_{oi}=p,z_{oi}=t|w_{oi}=w,\mathbf{z}_{-oi},\mathbf{x}_{-oi},\mathbf{w}_{-oi},
 \end{algorithmic} 
 \end{algorithm}
 
-算法\ref{algo:atm_train}描述了ATM模型的训练过程。该过程的输入是账户下历史订单根据预定义词库转化的词汇表；输出是两个参数矩阵。其中第1至13行是模型初始化过程；其中第14至25行是使用Gibbs取样过程，每次取样将单词的乘客和主题进行更新，在计算过程中，我们增加了两个矩阵存储中间变量的结果；最后两行对参数进行更新。
+算法\ref{algo:atm_train}描述了ATM模型的训练过程。该过程的输入是账户下历史订单根据预定义词库转化的词汇表；输出是两个参数矩阵。其中第1至13行是模型初始化过程；其中第14至25行是使用Gibbs取样过程，每次取样将单词的乘客和主题进行更新，在计算过程中，我们增加了两个矩阵存储中间变量的结果；最后更新$\Theta$和$\Phi$两个参数。
 
 \subsection{使用ATM模型进行乘客预测}
 
@@ -220,7 +220,7 @@ p(x=p|o_n,\Theta,\Phi) \propto p(p)\prod_{w \in o_n}\sum_t p(t|w)p(w|t,p)
 \subsubsection{实验数据集描述}
 我们的实验数据集是用户在多航线上的机票订单数据。数据以用户ID区分每个账户，以订单ID区分每条订单，以加密后的乘客证件号区分订单中的每位乘客。数据集引入乘客字段后，每个订单ID可能对应多条订单数据副本，每个副本之间唯一的差别就是乘客ID字段。我们取乘客数量在$2$至$5$人的网站账户，如果乘客数量过多，这个账户可能是代理账户，并且每位乘客订单比重很小。不适合用于训练乘客预测模型。
 
-除了从数据仓库中直接拉取的账户训练数据外，我们还生成了一份虚拟账户数据。在一些共享账户推荐问题的研究中会用到虚拟账户数据。一般的做法是将两个或多个账户的数据合并为一个账户。由于账户的偏好模型具有较为明显的差异，在研究中可以将每个真实账户的模型视作虚拟账户中的一个成员。使用这类数据可以充分挖掘共享账户中的特征差异。另外，一般的共享账户问题缺少准确的账户成员信息，无法验证实验结果，而使用虚拟账户数据同时可以作评价实验结果的依据。
+除了从数据仓库中直接拉取的账户训练数据外，我们还生成了一份虚拟账户数据。在一些共享账户推荐问题的研究中会用到虚拟账户数据。一般的做法是将两个或多个账户的数据合并为一个账户。由于账户的偏好模型具有较为明显的差异，在研究中可以将每个真实账户的偏好模型视作虚拟账户中的一个成员。使用这类数据可以充分挖掘共享账户中的特征差异。另外，一般的共享账户问题缺少准确的账户成员信息，无法验证实验结果，而使用虚拟账户数据同时可以作评价实验结果的依据。
 
 在我们的问题中，每位乘客的身份信息是明确的，我们生成虚拟账户数据的目的是探究乘客间的偏好差异对乘客预测以及机票推荐准确率的影响。我们的生成策略是在随机的两个账户中取一位乘客，并将这两位乘客合成一个乘客。如果两位乘客有同一个航班在同一起飞日期的订单，我们随机删除一条订单。
 
@@ -263,9 +263,9 @@ top-N = \frac{\sum_{i=1}^{|M|}|top-N(u_i) \cap O_{u_i}|}{|M|}
 其中，横轴是主题数量，范围从$5$到$50$共$10$个取值。进行乘客预测的两种方法分别是作者-主题模型（pATM）预测以及随机预测(Rand)。在随机预测中，我们同样取$10$个随机值。
 
 可以看到，在真实账户数据集中，随机乘客预测的平均准确率在$57\%$左右，而ATM模型的最高预测准确率是$63\%$。在虚拟账户数据集中，随机乘客预测的平均准确率在$50\%$，因为每个虚拟账户只有两位乘客，而我们每次仅选取一位乘客；并且每条订单的乘客数量也是$1$。而ATM模型的最高预测准确率是$60\%$。可以看到，在真实数据集中的乘客预测准确率略高与虚拟数据集。
-其原因是预测准确率同时和预测乘客以及实际乘客的数量有关，在不同的数据集上有不同的基准值。而随机算法在一定程度上可以反映出这个基准值。因此我们的主要标准是衡量ATM模型准确率对随机预测算法的提升。
+其原因是预测准确率和预测乘客以及实际乘客的数量有关，在不同的数据集上的基准值也不相同。而随机算法在一定程度上可以反映出这个基准值。因此我们的主要标准是衡量ATM模型准确率对随机预测算法的提升。
 
-可以看到，在虚拟账户上准确率的提升高于真实帐户。因为虚拟账户的乘客间差异更大，更有利于提取各自的特征。在真实账户数据集，乘客预测的准确率对比与随机预测有所提升。在两个数据集上，预测准确率都与主题的数量相关。当主题数少于$15$时，预测准确率保持在较高的水平；而随着主题数的增加，准确率有所下降；通过观察训练参数我们发现，过多的主题数会增加参数矩阵的稀疏性，进而影响到预测准确率。在两个数据集上，预测准确率都是在主题数为$10$的情况下达到最高值，这证明了ATM模型对同构的文档具有较稳定的表现。
+在虚拟账户上准确率的提升高于真实帐户。因为虚拟账户的乘客间差异更大，更有利于提取各自的特征。在真实账户数据集，乘客预测的准确率对比与随机预测有所提升。在两个数据集上，预测准确率都与主题的数量相关。当主题数少于$15$时，预测准确率保持在较高的水平；而随着主题数目的增加，预测准确率有所下降；通过观察训练参数我们发现，过多的主题数会增加参数的稀疏性，这会影响到预测准确率。在两个数据集上，预测准确率都是在主题数为$10$的情况下达到最高值，这证明了ATM模型对同构的文档具有较稳定的表现。
 在下一小节机票推荐部分中，我们将乘客预测模型的主题数量固定为$10$。
 
 
@@ -284,8 +284,7 @@ top-N = \frac{\sum_{i=1}^{|M|}|top-N(u_i) \cap O_{u_i}|}{|M|}
 \end{figure}
 
 图\ref{fig:pred_rec}展示了机票推荐的实验结果。其中图\ref{fig:pre_rec_r}是在真实账户数据集的推荐结果；图\ref{fig:pre_rec_a}是在虚拟账户数据集的实验结果。
-其中，横轴是主题数量。进行机票推荐的两种方法分别是结合乘客预测的推荐(pdPre)以及不使用乘客预测的推荐(Pre)。可以看到，推荐结果随着主题数量的变化有较大的波动。并且其变化趋势与乘客预测准确率较为吻合。当主体数量在10到15时，推荐准确率达到峰值；当主题数量在$25$到$30$以上时，推荐效果反而差于不进行乘客预测的推荐。因为此时进行乘客预测的准确率较低，而无法做出有针对性的乘客模型融合。另外，在虚拟数据集上机票推荐准确率低于真实数据集。因为由不同账户抽取出的乘客偏好会有较大差异。如果将其视作一个账户进行偏好建模，会对推荐结果产生影响。同样，虚拟数据集对推荐效果的提升程度高于真实数据集。由此我们可以得出结论：在较高的乘客预测准确率的保障下，乘客间的差异越大，
-结合乘客预测的机票推荐准确率提升越大。
+其中，横轴是主题数量。进行机票推荐的两种方法分别是结合乘客预测的推荐(pdPre)以及不使用乘客预测的推荐(Pre)。可以看到，推荐结果随着主题数量的变化有较大的波动。并且其变化趋势与乘客预测准确率较为吻合。当主体数量在10到15时，推荐准确率达到峰值；当主题数量在$25$到$30$以上时，推荐效果反而差于不进行乘客预测的推荐。因为此时进行乘客预测的准确率较低，而无法做出有针对性的乘客模型融合。另外，在虚拟数据集上机票推荐准确率低于真实数据集。因为由不同账户抽取出的乘客偏好会有较大差异，如果将其视作一个账户进行偏好建模，会影响机票推荐效果。同样，虚拟数据集对推荐效果的提升程度高于真实数据集。由此我们可以得出结论：在较高的乘客预测准确率的保障下，乘客间的差异越大，结合乘客预测的机票推荐准确率提升越大。
 
 
 \begin{figure}
@@ -301,11 +300,11 @@ top-N = \frac{\sum_{i=1}^{|M|}|top-N(u_i) \cap O_{u_i}|}{|M|}
 
 图\ref{fig:pred_top}展示了机票推荐的实验结果。其中图\ref{fig:pre_top_r}是在真实账户数据集的推荐结果；图\ref{fig:pre_top_a}是在虚拟账户数据集的实验结果。在该实验中，我们将ATM模型的主题数量固定在10。
 其中，横轴是$Top-N$策略中推荐机票的条数。在$Top-N$方法中，我们一并计较了第三章中提到的基于低价排序(pRank)和热门程度(hRank)排序的推荐准确率。可以看到，总体上机票推荐准确率与推荐的数量呈正比例关系。几种基于基础业务策略的机票推荐准确率与基于用户特征分布模型的推荐准确率有较大的差异。并且推荐机票数量从$1$到$10$，结合乘客预测的机票推荐(pdPre)都比不进行乘客预测的机票推荐(Pre)具有更高的准确率。同时可以看到，
-在虚拟数据集上的推荐准确率提升高于真实数据集。两种衡量评价指标证实了结合用户预测的机票推荐算法在单一的用户特征分布模型基础上进一步提升机票推荐的准确率。并且账户下乘客的偏好差异越大，对推荐效果提升越明显。
+在虚拟数据集上的推荐准确率提升高于真实数据集。两种衡量指标表明，结合用户预测的机票推荐算法在单一的用户特征分布模型基础上进一步提升机票推荐的准确率。并且账户下乘客的偏好差异越大，对推荐效果提升越明显。
 
 
 \section{本章小结}
 
 本章我们研究了机票用户中的乘客共享账户问题。并基于可以获取账户成员真实信息的场景提出了使用作者-主题模型的乘客预测模型。首先我们预定义了机票特征及上下文词库。在模型训练过程中，我们将每个账户的所有订单作为一个语料库，每条订单作为一个文档，订单的特征取值区间作为一个单词。使用Gibbs取样进行参数推导。并就当前会话的上下文信息给出乘客预测结果。
 
-得到乘客预测结果后，我们将乘客预测结合到机票推荐流程中。我们介绍了推荐流程的概况以及为用户更新ATM模型的过程。使得该模型具有实际应用价值。在实验章节，我们对乘客预测和结合乘客预测的机票推荐进行了数据实验并分析了实验结果。可以说明，ATM模型对乘客预测的准确率有较好的提升效果，并且结合了乘客预测的特征分布模型可以提升个性化机票推荐的准确率。
+得到乘客预测结果后，我们将乘客预测结合到机票推荐流程中。我们介绍了推荐流程的概况以及为用户更新ATM模型的过程。使得该模型具有实际应用价值。在实验章节，我们对乘客预测和结合乘客预测的机票推荐进行了数据实验并分析了实验结果。可以说明，ATM模型对乘客预测的准确率有较好的提升效果，并且结合了乘客预测的特征分布模型可以提升机票推荐的准确率。
