--- a/tex/00_abstract.tex
+++ b/tex/00_abstract.tex
@@ -20,15 +20,15 @@
 \addcontentsline{toc}{chapter}{ABSTRACT}
 Recent years, there are more passengers booking flights through online travel agencies. Typically, an user may fillin his travel information, then he will get a result containing dozens of candidate flights. Thus a recommender system is necessary for better user experiences.
 
-This thesis mainly researches user preference based flight recommendation. We propose content-based recommendation approaches based on dynamic features of flights. In addition, we analyze some existing problems in flight recommendation, and improve recommendation further more. The main work of thesis is reflected as follow:
+This thesis mainly researches user preference based flight recommendation. The research proposes a content-based recommendation approach based on dynamic features of flights. In addition, some existing problems in flight recommendation is analyzed in order to improve recommendation further more. The main work of thesis is reflected as follow:
 
-1. Propose a feature distribution based preference model and flight recommendation approach. We analyze significant features of flight ticket and construct user preference model based on their historical orders. We then come up with a recommendation scene simulating to real flight ticket booking.
+1. Propose a feature distribution based preference model and flight recommendation approach. First, the thesis analyzes significant features of flight ticket and constructs user preference model based on their historical orders. Then a recommendation scene simulating to real flight ticket booking is proposed.
 
-2. Research the cold start problem. The problem is classified to two aspects, including cold start at aimed air route and cold start at all air routes. For the former one, we propose methods to evaluate similarity between air routes and construct a mixture preference model. For the latter problem, we take social relationship between users into consider, we then combine preference of them to improve recommendation.
+2. Research the cold start problem. The problem is classified to two aspects, including cold start at aimed air route and cold start at all air routes. For the former one, approaches are proposed to evaluate similarity between air routes and a mixture preference model is constructed. For the latter problem, social relationship between users is taken into consideration, then combining preference of them to improve recommendation.
 
-3. Research shared account problem. It is quite common that a passenger books flights for his family members or colleagues. It is likely that every passenger has his own preferences. Unfortunately, before placing the order, people will not provide passengers' information. We may predict who are going to fly to improve recommendation. We use a author-topic model to predict passengers and combine the result into flight recommendation.
+3. Research shared account problem. It is quite common that a passenger books flights for his family members or colleagues. It is likely that every passenger has his own preferences. Unfortunately, before placing the order, people will not provide passengers' information. In order to improve precision of  recommendation, author-topic model is used to calculate which passengers are going to fly.
 
-4. Propose a recommendation algorithm based on latent factor. We notice that users' preference may alter at different takeoff dates, such as workday, weekend and holiday. We transform explicit features to latent factors, thus to capture the change of user' preference. Finally, provide recommendation combined with explicit features and latent factors.
+4. Propose a recommendation algorithm based on latent factor. As noticed that users' preference may alter at different takeoff dates, such as workday, weekend and holiday, so explicit features are transformed to latent factors, thus to capture the change of user' preference. Finally, recommendation combined with explicit features and latent factors is provided for users.
 
 
 \textbf{Keywords:} Flight Recommendation，Cold Start，Topic Model，Shared Account，Latent Factor.
