--- a/tex/01_intro.tex
+++ b/tex/01_intro.tex
@@ -33,7 +33,9 @@
 
 \subsection{一般推荐系统的研究现状}
 
-二十世纪九十年代明尼苏达大学GroupLens研究组推出的GroupLens系统\cite{konstan1997grouplens}标志着推荐系统的诞生。推荐系统需要根据用户个人的偏好并结合商品的内容进行推荐，依赖于用户历史行为数据与相关专业领域知识。用户行为数据一般分为显式反馈行为和隐式反馈行为\cite{oard1998implicit,lin2001characterized}。显式反馈可以明确地表示用户对物品喜好与否，常见的方式为用户对物品进行评分。隐式反馈，例如用户对商品的点击、收藏等行为，通常不能直接表达用户对物品的喜爱程度。显式反馈通常需要用户的主动参与，因而与显式反馈相比，隐式反馈行为更为普遍，也可以产生更多的用户数据，但隐式反馈通常只包含正反馈，如果用户对一项物品产生行为，通常代表用户对该物品有所偏好，反之，却不能认为用户不偏好该物品。显式反馈则可以根据用户的评分高低，同时包含正负反馈。论文中研究的机票推荐算法只有隐式反馈数据。按照算法基于的信息数据，推荐系统主要分为协同过滤\cite{breese1998empirical}、基于内容推荐\cite{pazzani1999framework,claypool1999combining}以及混合过滤\cite{soboroff1999combining}。
+二十世纪九十年代明尼苏达大学GroupLens研究组推出的GroupLens系统\cite{konstan1997grouplens}标志着推荐系统的诞生。推荐系统需要根据用户个人的偏好并结合商品的内容进行推荐，依赖于用户历史行为数据与相关专业领域知识。
+
+用户行为数据根据收集方式分为显式反馈行为和隐式反馈行为\cite{oard1998implicit,lin2001characterized}，根据用户是否偏好该物品分为正反馈以及负反馈\cite{holte1996inferring}。显式反馈可以明确地表示用户对物品喜好与否，总体上有三种表达方式：喜欢/反感 —— 用户使用二元评分机制将物品分为相关与不相关两类\cite{billsus1999hybrid}；打分 —— 将不同的喜好程度映射到不同的评分数值,用来表示对物品的评判\cite{pazzani1996syskill}；文字评论 —— 依据用户对物品的评论来确定用户对物品的偏好\cite{resnick1994grouplens}。而隐式反馈，例如用户对商品的点击、收藏等行为，通常不能直接表达用户对物品的喜爱程度。隐式反馈通常只包含正反馈，如果用户对一项物品产生行为，通常代表用户对该物品有所偏好，反之，却不能认为用户不偏好该物品。显式反馈则可以根据用户的评分高低，同时包含正负反馈。显式反馈通常需要用户的主动参与，因而与显式反馈相比，隐式反馈行为更为普遍，也可以产生更多的用户数据。论文中研究的机票推荐算法只有隐式反馈数据。按照算法基于的信息数据，推荐系统主要分为协同过滤\cite{breese1998empirical}、基于内容推荐\cite{pazzani1999framework,claypool1999combining}以及混合过滤\cite{soboroff1999combining}。
 
 协同过滤是推荐系统研究中最常见的方法，对显式反馈和隐式反馈都适用。在该算法中，物品的相关性不是通过物品自身的内容属性决定的，而是由大量用户-物品行为决定，因此这类方法对领域业务知识的要求较少。协同过滤又包括很多子类，例如：基于用户的推荐\cite{babu2011implementation}、基于物品的推荐\cite{sarwar2001item,linden2003amazon}、基于社会关系的推荐\cite{asabere2015socially,massa2007trust}。协同过滤的基本假设是“用户会喜欢与他具有相似偏好(相近社会关系)的用户喜欢的物品”以及“用户会喜欢与他喜欢的物品具有较高相似性的物品”。在这种方法中，用户-物品行为可以生成一个矩阵，每位用户对应行向量，每个物品对应列向量，每个元素表示用户对物品的评价或行为行为。用户或物品之间的相似性通常由向量的余弦\cite{goshtasby2012similarity}计算。它的优点是在数据充足的情况下具有较好的推荐效果，并且可以对物品的相关性和用户的偏好进行充分的隐性挖掘，但面临数据稀疏和冷启动的问题，庞大的计算量也限制了算法的扩展性。
 		
