--- a/tex/03_baseline.tex
+++ b/tex/03_baseline.tex
@@ -3,8 +3,7 @@
 \chapter{机票数据介绍及基于特征分布的推荐算法}
 \label{chap:baseline}
 本章对研究用到的机票数据进行简要介绍及内容属性分析。在此分析的基础上，
-给出用户特征分布模型的建模方法并根据用户的特征模型进行个性化机票推荐。
-根据实验结果评估推荐算法的效果。本章的算法作为一个基线算法，是后续章节算法改进的基础与对照。
+提出用户特征分布模型以表示用户偏好，并基于用户偏好进行个性化机票推荐，结合数据实验评估推荐算法的效果。本章的算法作为一个基线算法，是后续章节进行算法改进的基础与对照。
 
 \section{数据来源及描述}
 
