--- a/tex/04_latent.tex
+++ b/tex/04_latent.tex
@@ -144,13 +144,7 @@ $F_i$ & 机票显性特征，增加起飞日期特征，维度 |F * 1| \\ \hline
 
 \section{实验结果分析}
 
-本节我们对结合隐性特征的机票推荐进行实验及分析。我们将介绍实验数据集、评价指标以及机票推荐结果。
-
-\subsection{实验数据集与评价指标}
-在实验中，我们选取北京到上海，北京到成都，北京到深圳，北京到西安四条航线的活跃用户作为测试用户。我们将测试订单按起飞日期分成工作日、周末、节假日三类。研究结合隐性特征的模型是否能够适应用户在不同起飞日期的行为变化。
-
-本章我们仍使用第三章实验评价指标，式\ref{eq:a-rec}对每条机票推荐准确率进行评价，
-式\ref{eq:ma}对为机票推荐平均准确率进行评价。
+本节我们对结合隐性特征的机票推荐进行实验及分析。在实验中，我们选取北京到上海，北京到成都，北京到深圳，北京到西安四条航线的活跃用户作为测试用户。我们将测试订单按起飞日期分成工作日、周末、节假日三类。研究结合隐性特征的模型是否能够适应用户在不同起飞日期的行为变化。
 
 \subsection{机票推荐准确率}
 
