--- a/tex/07_summary.tex
+++ b/tex/07_summary.tex
@@ -4,7 +4,7 @@
 \label{chap:summary}
 
 \section{本文工作总结}
-本文中的研究工作主要体现在以下几个方面。
+本文中的研究工作主要体现在以下几个方面：
 
 1.提出基于特征分布模型的机票推荐算法。通过对原始机票订单的分析，结合业务经验知识，我们提取了影响用户购买决策的机票特征并进行离散化。通过历史订单统计用户在各特征上的选择分布，分析用户对每个特征的偏好。同时，使用信息学中的熵值理论衡量每位用户对机票特征的集中程度，提出了特征权重计算方法。结合机票订购的实际应用场景，将推荐算法分解为离线构建模型和在线计算评分两个步骤，使算法达到了在生产环境部署上线的条件。该算法在后续章节中作为基线算法，用于检测在细化推荐场景后，推荐效果是否有提升。
 
