--- a/tex/id.tex
+++ b/tex/id.tex
@@ -1,21 +1,20 @@
 %# -*- coding: utf-8-unix -*-
-\title{机票个性化推荐方法}
-\author{某\quad{}某}
-\advisor{某某}
-\defenddate{2014年12月17日}
+\title{面向机票的推荐方法}
+\author{赵亚峰}
+\advisor{曹健}
+\defenddate{2017年1月}
 \school{上海交通大学}
-\institute{某某系}
-\studentnumber{0010900990}
-\major{某某专业}
+\institute{电子信息与电气工程学院}
+\studentnumber{1140339078}
+\major{计算机科学与技术}
 
 \englishtitle{Personalized Flight Recommendation}
-\englishauthor{\textsc{Mo Mo}}
-\englishadvisor{Prof. \textsc{Mou Mou}}
-% \englishcoadvisor{Prof. \textsc{Uom Uom}}
+\englishauthor{\textsc{Yafeng Zhao}}
+\englishadvisor{Prof. \textsc{Jian Cao}}
 \englishschool{Shanghai Jiao Tong University}
-\englishinstitute{\textsc{Depart of XXX, School of XXX} \\
+\englishinstitute{\textsc{School of Electronic Information and Electrical Engineering} \\
   \textsc{Shanghai Jiao Tong University} \\
   \textsc{Shanghai, P.R.China}}
 \englishmajor{A Very Important Major}
-\englishdate{Dec. 17th, 2014}
+\englishdate{January, 2017}
 
