--- a/tex/pubreview.tex
+++ b/tex/pubreview.tex
@@ -1,5 +1,5 @@
 %# -*- coding: utf-8-unix -*-
 
 \begin{publications}{99}
-    \item\textsc{第一作者}. {XXX期刊}, 2007.  
+    \item Zhao Y, Cao J, Tan Y. Passenger Prediction in Shared Accounts for Flight Service Recommendation[M]// Advances in Services Computing. Springer International Publishing, 2016.
 \end{publications}
